refactor: 虚拟线程迁移收官 + AI Resilience4j Retry 韧性基建
- 虚拟线程迁移：移除 domainEventExecutor / WebSocket inbound/outbound /
  ai-search 自定义线程池，删除 ThreadPoolProperties 死代码。所有 IO
  异步任务转虚拟线程，仅保留 taskScheduler（poolSize=5，@Scheduled）
- Resilience4j Retry：新增 RetryRegistry + aiLlm/aiVision 具名实例，
  注入 CachingLlmAdapter / CachingVisionAdapter，指数退避 500ms×2，
  最多 3 次，重试 RestClientException
- 测试现代化：Jackson API 迁移（asText→asString, isTextual→asStringOpt），
  Mockito 泛型 matcher 简化
- Flyway 开发配置：validate-on-migrate=false，文档同步
- 内务：LocalRateLimiter 改用 taskScheduler 替代单线程 ScheduledExecutor，
  AiSearchEnhancerAdapter cancel(false) 避免中断虚拟线程 carrier
- 文档：AGENTS.md / CONFIGURATION.md 同步，归档 58 行